tests/paczka1/fuzzy1/92059782.err
Error in line 3: DQb8 A95 89,4
Error in line 30: S519 A241 29,3
